<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClubHelper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_export">Export</string>
    <string name="action_restore">Wiederherstellen</string>
    <string name="action_toserver">Synchronisieren</string>
    <string name="action_servers">Server</string>
    <string name="lblPrename">Vorname</string>
    <string name="lblSurname">Nachname</string>
    <string name="lblBirth">Geburtstag</string>
    <string name="lblOK">OK</string>
    <string name="lblSave">Speichern</string>
    <string name="lblCancel">Abbrechen</string>
    <string name="lblDelete">Löschen</string>
    <string name="lblYes">Ja</string>
    <string name="lblNo">Nein</string>
    <string name="lblSearch">Suche</string>
    <string name="lblAdd">Hinzufügen</string>
    <string name="lbl_edit">Bearbeiten</string>
    <string name="lbl_contacts">Kontakte</string>
    <string name="lbl_rest_server">Server</string>
    <string name="lbl_adress">Adresse</string>
    <string name="lbl_relations">Beziehungen</string>
    <string name="title_connect_sms">Sende SMS an: </string>
    <string name="title_quest_which_info_toadd">Welche Art von Information soll ergänzt werden?</string>
    <string name="title_quest_which_info_toedit">Welche Information soll bearbeitet werden?</string>
    <string name="title_quest_kind_relation">Welche Art von Beziehung?</string>
    <string name="title_quest_store_changes">Änderungen speichern?</string>
    <string name="search_hint">Filtere Personen</string>
    <string name="title_activity_person_edit">PersonEditActivity</string>
    <string name="do_import">Import</string>
    <string name="PARENT">Elternteil</string>
    <string name="CHILD">Kind</string>
    <string name="SIBLINGS">Geschwister</string>
    <string name="RELATIONSHIP">Freund(-in)</string>
    <string name="ACTIVE">Aktive(-r)</string>
    <string name="STAFF">Personal</string>
    <string name="RELATIVE">Angehöriger</string>
    <string name="lbl_person_type">Aufgabe</string>
    <string name="action_groups">Gruppen</string>

</resources>
