<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="200"
        android:title="@string/action_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_addPerson"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/lblAdd"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/lbl_edit"
        app:showAsAction="ifRoom" />
</menu>
